# recursive-data-cleaner

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  test_mlx_backend.py
backends/: __init__.py  openai_backend.py
docs/: workflow-state.md
docs/archive/: v090-implementation-plan.md  v100-implementation-plan.md  workflow-state.md
docs/archive/contracts/: v090-cli-contract.md  v090-success-criteria.md  v100-success-criteria.md
docs/archive/handoffs/: v100-research-handoff.md
docs/archive/research/: cli-backend-patterns.md  v100-apply-mode-research.md
docs/contracts/: v100-api-contract.md
docs/handoffs/: v090-research-handoff.md
docs/orchestrated-dev/: session-index.md
docs/orchestrated-dev/001-refactor-cleaner/: handoff.md
docs/refactor-assessment/: report.md
docs/research/: cli-local-research.md
recursive_cleaner/: __init__.py  __main__.py  apply.py  cleaner.py  cli.py  latency.py  output.py  parsers.py  prompt.py  response.py  state.py  tui.py  validation.py
samples/: zhuan_falun_sample.txt
tests/: test_apply.py  test_cli.py  test_holdout.py  test_latency.py  test_openai_backend.py  test_output.py  test_parsers.py  test_text_mode.py  test_validation.py
