[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recursive-cleaner"
version = "0.1.0"
description = "LLM-powered incremental data cleaning pipeline"
requires-python = ">=3.10"
dependencies = [
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
